完善了一大堆细节,主要是加上tokencode验证机制,页面超时设置,修复细节问题

--- a/FTWeb/ViewV5/AppPage/HYGL/HYGLLIST.html
+++ b/FTWeb/ViewV5/AppPage/HYGL/HYGLLIST.html
@@ -170,7 +170,7 @@
                 var frameid = $("iframe", $(layero)).attr('id');
                 var plnr = ComFunJS.isIE() ? top.window.frames[frameid].getpl() : top.window.frames[frameid].contentWindow.getpl();
 
-                $.post('/API/WXAPI.ashx?Action=HYGL_UPDATEHYJL&r=' + Math.random(), { "P1": el.ID, "P2": plnr }, function (resultData) {
+                $.post('/API/VIEWAPI.ashx?Action=HYGL_UPDATEHYJL&r=' + Math.random(), { "P1": el.ID, "P2": plnr }, function (resultData) {
                     top.layer.close(index);
                     var resultData = JSON.parse(resultData);
                     if (resultData.ErrorMsg == "") {
