--- a/FTWeb/View_Mobile/UI/CRM/UI_HTGL_LIST.html
+++ b/FTWeb/View_Mobile/UI/CRM/UI_HTGL_LIST.html
@@ -262,7 +262,7 @@
                     event.stopPropagation();
                 }
                 $.confirm("确认要删除吗", function () {
-                    $.post('/API/WXAPI.ashx?Action=CRM_DELHTBYID', { "P1": el.ID }, function (result) {
+                    $.post('/API/VIEWAPI.ashx?Action=CRM_DELHTBYID', { "P1": el.ID }, function (result) {
                         result = JSON.parse(result)
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
@@ -279,7 +279,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=CRM_GETHTLIST&r=" + Math.random(), { "p": model.page, ID: model.DataID, P1: model.type }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=CRM_GETHTLIST&r=" + Math.random(), { "p": model.page, ID: model.DataID, P1: model.type }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (model.page == 1 && r.Result.length == 0) {
