--- a/FTWeb/View_Mobile/UI/CRM/UI_KHGL_LIST.html
+++ b/FTWeb/View_Mobile/UI/CRM/UI_KHGL_LIST.html
@@ -344,7 +344,7 @@
                 },
                 delKHGL: function (el) {
                     $.confirm("确认要删除客户吗，删除后客户下的联系人、合同、跟进记录都将删除", function () {
-                        $.post('/API/WXAPI.ashx?Action=CRM_DELKHGL', { "P1": el.ID }, function (result) {
+                        $.post('/API/VIEWAPI.ashx?Action=CRM_DELKHGL', { "P1": el.ID }, function (result) {
                             result = JSON.parse(result)
                             if (result.ErrorMsg == "") {
                                 ComFunJS.winsuccess("删除成功");
@@ -365,7 +365,7 @@
                 loadMore: function () {
                     if (model.loading) return;
                     model.loading = true;
-                    $.getJSON("/API/WXAPI.ashx?Action=CRM_GETKHGLLIST&r=" + Math.random(), { "p": model.page, P1: model.type, Content: model.search, ID: model.DataID }, function (r) {
+                    $.getJSON("/API/VIEWAPI.ashx?Action=CRM_GETKHGLLIST&r=" + Math.random(), { "p": model.page, P1: model.type, Content: model.search, ID: model.DataID }, function (r) {
                         model.loading = false;
                         if (r.ErrorMsg == "") {
                             if (model.page == 1 && r.Result.length == 0) {
