--- a/FTWeb/View_Mobile/UI/CRM/UI_KHMP_LIST.html
+++ b/FTWeb/View_Mobile/UI/CRM/UI_KHMP_LIST.html
@@ -276,7 +276,7 @@
             },
             delMP: function (el) {
                 ComFunJS.confirm("确认要删除吗", function () {
-                    $.getJSON('/API/WXAPI.ashx?Action=CRM_DELKHMP', { "P1": el.ID }, function (result) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=CRM_DELKHMP', { "P1": el.ID }, function (result) {
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(el);
@@ -289,7 +289,7 @@
             },
             saveMP: function (el) {
                 ComFunJS.confirm("确认要保存为联系人吗？", function () {
-                    $.getJSON('/API/WXAPI.ashx?Action=CRM_MPDRLXR', { "P1": el.ID }, function (result) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=CRM_MPDRLXR', { "P1": el.ID }, function (result) {
                         if (result.ErrorMsg == "") {
                             el.Status = '1';
                             ComFunJS.winsuccess("保存成功");
@@ -300,7 +300,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=CRM_GETKHMPLIST&r=" + Math.random(), { "p": model.page, P1: model.type, ID: model.DataID }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=CRM_GETKHMPLIST&r=" + Math.random(), { "p": model.page, P1: model.type, ID: model.DataID }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (model.page == 1 && r.Result.length == 0) {
