--- a/FTWeb/View_Mobile/UI/UI_DCGL_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_DCGL_LIST.html
@@ -244,7 +244,7 @@
                             "IDS": IDS
                         };
 
-                        $.post("/API/WXAPI.ashx?Action=DCGL_ADDDCGLDD&r=" + Math.random(), { "P1": JSON.stringify(d) }, function (data) {
+                        $.post("/API/VIEWAPI.ashx?Action=DCGL_ADDDCGLDD&r=" + Math.random(), { "P1": JSON.stringify(d) }, function (data) {
                             lg.hide();
                             var data = $.parseJSON(data);
                             if (data.ErrorMsg == "") {
@@ -309,7 +309,7 @@
         var strType = ComFunJS.getQueryString("type");
 
         avalon.ready(function () {
-            $.getJSON("/API/WXAPI.ashx?Action=XTGL_GETCPROLE&r=" + Math.random(), {}, function (r) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETCPROLE&r=" + Math.random(), {}, function (r) {
                 if (r.ErrorMsg == "") {
                     if (r.Result == "Y") {
                         if (strType == "2") {
@@ -318,7 +318,7 @@
                     }
                 }
             })
-            $.post("/API/WXAPI.ashx?Action=DCGL_GETDCGLLIST_PAGE&r=" + Math.random(), {}, function (data) {
+            $.post("/API/VIEWAPI.ashx?Action=DCGL_GETDCGLLIST_PAGE&r=" + Math.random(), {}, function (data) {
 
                 var data = $.parseJSON(data);
                 if (data.ErrorMsg == "") {
