--- a/FTWeb/View_Mobile/UI/CRM/UI_GJJL_LIST.html
+++ b/FTWeb/View_Mobile/UI/CRM/UI_GJJL_LIST.html
@@ -198,7 +198,7 @@
             },
             delGJJL: function (el) {
                 $.confirm("确认要删除吗", function () {
-                    $.post('/API/WXAPI.ashx?Action=CRM_DELGJJL', { "P1": el.ID }, function (result) {
+                    $.post('/API/VIEWAPI.ashx?Action=CRM_DELGJJL', { "P1": el.ID }, function (result) {
                         result = JSON.parse(result)
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
@@ -213,7 +213,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=CRM_GETGJJLLIST&r=" + Math.random(), { "p": model.page, P1: model.type, ID: model.DataID }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=CRM_GETGJJLLIST&r=" + Math.random(), { "p": model.page, P1: model.type, ID: model.DataID }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (model.page == 1 && r.Result.length == 0) {
