--- a/FTWeb/View_Mobile/UI/CRM/index.html
+++ b/FTWeb/View_Mobile/UI/CRM/index.html
@@ -135,7 +135,7 @@
             userData: {},
             TongJiData: { KHQTY: 0, KHQTY2: 0, KHQTY3: 0 },
             GetGongJI: function () {
-                $.getJSON("/API/WXAPI.ashx?Action=CRM_GETCOUNT", function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=CRM_GETCOUNT", function (r) {
                     if (r.ErrorMsg == "") {
                         model.TongJiData.KHQTY = r.Result;
                         model.TongJiData.KHQTY2 = r.Result1;
@@ -162,7 +162,7 @@
         })
 
         avalon.ready(function () {
-            $.getJSON("/API/WXAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
                 if (r.ErrorMsg == "") {
                     model.userData = r.Result;
                 }
