--- a/FTWeb/View_Mobile/UI/KSGL/UI_KSRESULT.html
+++ b/FTWeb/View_Mobile/UI/KSGL/UI_KSRESULT.html
@@ -113,7 +113,7 @@
             ksapId: ComFunJS.getQueryString("ksapid", 4),
             numberData: ["一", "二", "三", "四", "五", "六", "七", "八"],
             GetKSPAGE: function () {
-                $.getJSON('/API/WXAPI.ashx?Action=KSGL_GETMOBILEYJVIEW', { P2: model.ksapId, P1: '18739915661' }, function (result) {
+                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETMOBILEYJVIEW', { P2: model.ksapId, P1: '18739915661' }, function (result) {
                     if (result.ErrorMsg == "") {
                         var i = 1;
                         result.Result[0].TXType.forEach(function (item) {
