--- a/FTWeb/View_Mobile/UI/KSGL/UI_SJGL.html
+++ b/FTWeb/View_Mobile/UI/KSGL/UI_SJGL.html
@@ -147,7 +147,7 @@
             SJData: {},
             KSSJ: 0,
             GetKSINFO: function (user) {//获取用户数据接口
-                $.getJSON('/API/WXAPI.ashx?Action=KSGL_GETKSINFORESULT', { P1: ComFunJS.getQueryString("ksapid") }, function (resultData) {
+                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSINFORESULT', { P1: ComFunJS.getQueryString("ksapid") }, function (resultData) {
                     if (resultData.ErrorMsg == "") {
                         model.ModelData = resultData.Result;
                         model.SJData = resultData.Result1[0];
