--- a/FTWeb/View_Mobile/UI/RLZY/index.html
+++ b/FTWeb/View_Mobile/UI/RLZY/index.html
@@ -172,7 +172,7 @@
             userData: {},
             TongJiData: { CDQTY: 0, ZDQTY: 0, QJQTY: 0 },
             GetGongJI: function () {
-                $.getJSON("/API/WXAPI.ashx?Action=KQGL_GETKQJLLIST", function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=KQGL_GETKQJLLIST", function (r) {
                     if (r.ErrorMsg == "") {
                         model.TongJiData.CDQTY = r.Result2[0].CDCount;
                         model.TongJiData.ZDQTY = r.Result2[0].ZTCount;
@@ -208,7 +208,7 @@
         })
 
         avalon.ready(function () {
-            $.getJSON("/API/WXAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
                 if (r.ErrorMsg == "") {
                     model.userData = r.Result;
                 }
