--- a/FTWeb/View_Mobile/UI/UI_CAR_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_CAR_LIST.html
@@ -89,7 +89,7 @@
         })
 
         avalon.ready(function () {
-            $.getJSON('/API/WXAPI.ashx?Action=YCGL_GETKYCLLIST&r=' + Math.random(), {}, function (resultData) {
+            $.getJSON('/API/VIEWAPI.ashx?Action=YCGL_GETKYCLLIST&r=' + Math.random(), {}, function (resultData) {
                 if (resultData.ErrorMsg == "") {
                     model.ctData = resultData.Result;
                 }
