--- a/FTWeb/View_Mobile/UI/UI_CCXJ_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_CCXJ_LIST.html
@@ -228,7 +228,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=CCXJ_GETCCXJLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID, Content: model.search }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=CCXJ_GETCCXJLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID, Content: model.search }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (model.page == 1 && r.Result.length == 0) {
@@ -280,7 +280,7 @@
                 model.getSHNum();
             },
             getSHNum: function () {//抓取审核数量
-                $.getJSON("/API/WXAPI.ashx?Action=LCSP_GETMODELDSHQTY&r=" + Math.random(), { P1: "CCXJ" }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=LCSP_GETMODELDSHQTY&r=" + Math.random(), { P1: "CCXJ" }, function (r) {
                     if (r.ErrorMsg == "") {
                         if (r.Result.length > 0) {
                             model.shNum = r.Result[0].QTY;
