--- a/FTWeb/View_Mobile/UI/UI_DCGL_YDLIST.html
+++ b/FTWeb/View_Mobile/UI/UI_DCGL_YDLIST.html
@@ -142,7 +142,7 @@
             jd: function (el) {
                 ComFunJS.showCommentNew(function (result) {
 
-                    $.post("/API/WXAPI.ashx?Action=DCGL_QRSDDD&r=" + Math.random(), { "P1": el.ID, "P2": result.comment }, function (data) {
+                    $.post("/API/VIEWAPI.ashx?Action=DCGL_QRSDDD&r=" + Math.random(), { "P1": el.ID, "P2": result.comment }, function (data) {
 
                         var r = $.parseJSON(data);
                         if (data.ErrorMsg == "") {
@@ -160,7 +160,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=DCGL_GETDCGLLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=DCGL_GETDCGLLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (model.page == 1 && r.Result.length == 0) {
@@ -203,7 +203,7 @@
             if (model.DataID == "-1") {//如果参数中没有数据ID，则默认抓取当前用户数据
                 model.type = 2;
             }
-            $.getJSON("/API/WXAPI.ashx?Action=XTGL_GETCPROLE&r=" + Math.random(), {}, function (r) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETCPROLE&r=" + Math.random(), {}, function (r) {
                 if (r.ErrorMsg == "") {
                     if (r.Result == "Y") {
                         model.isadd = "Y";
