--- a/FTWeb/View_Mobile/UI/UI_GZT_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_GZT_LIST.html
@@ -226,7 +226,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=XZGL_GETGZDLIST&r=" + Math.random(), { "p": model.page, ID: model.DataID, Content: model.search }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=XZGL_GETGZDLIST&r=" + Math.random(), { "p": model.page, ID: model.DataID, Content: model.search }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         for (var i = 0; i < r.Result.length; i++) {
