--- a/FTWeb/View_Mobile/UI/UI_HYS_INFO.html
+++ b/FTWeb/View_Mobile/UI/UI_HYS_INFO.html
@@ -171,7 +171,7 @@
         });
         avalon.ready(function () {
             if (strId != null) {
-                $.getJSON('/API/WXAPI.ashx?Action=HYGL_GETHYSMODEL&r=' + Math.random(), { P1: strId }, function (resultData) {
+                $.getJSON('/API/VIEWAPI.ashx?Action=HYGL_GETHYSMODEL&r=' + Math.random(), { P1: strId }, function (resultData) {
                     if (resultData.ErrorMsg == "") {
                         model.modelData = resultData.Result;
                         model.ctData = resultData.Result1;
