--- a/FTWeb/View_Mobile/UI/UI_KDGL_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_KDGL_LIST.html
@@ -162,7 +162,7 @@
             sj: function (el) {
                 $.confirm('您确认收件吗?',
                     function () {
-                        $.getJSON("/API/WXAPI.ashx?Action=KDGL_QRSDKD&r=" + Math.random(), { "P1": el.ID }, function (r) {
+                        $.getJSON("/API/VIEWAPI.ashx?Action=KDGL_QRSDKD&r=" + Math.random(), { "P1": el.ID }, function (r) {
                             if (r.ErrorMsg == "") {
 
                                 el.Status = r.Result.Status;
@@ -188,7 +188,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=KDGL_GETKDGLLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=KDGL_GETKDGLLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (model.page == 1 && r.Result.length == 0) {
@@ -231,7 +231,7 @@
             if (model.DataID == "-1") {//如果参数中没有数据ID，则默认抓取当前用户数据
                 model.type = 2;
             }
-            $.getJSON("/API/WXAPI.ashx?Action=XTGL_GETKDROLE&r=" + Math.random(), {}, function (r) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETKDROLE&r=" + Math.random(), {}, function (r) {
                 if (r.ErrorMsg == "") {
                     if (r.Result == "Y") {
                         model.type = 1;
