--- a/FTWeb/View_Mobile/UI/UI_LCSP_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_LCSP_LIST.html
@@ -240,7 +240,7 @@
                 loadMore: function () {
                     if (model.loading) return;
                     model.loading = true;
-                    $.getJSON("/API/WXAPI.ashx?Action=LCSP_GETLCSPLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID, Content: model.search }, function (r) {
+                    $.getJSON("/API/VIEWAPI.ashx?Action=LCSP_GETLCSPLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID, Content: model.search }, function (r) {
                         model.loading = false;
                         if (r.ErrorMsg == "") {
                             if (model.page == 1 && r.Result.length == 0) {
@@ -308,7 +308,7 @@
                     model.isshowmenu = !model.isshowmenu
                 },
                 getSHNum: function () {//抓取审核数量
-                    $.getJSON("/API/WXAPI.ashx?Action=LCSP_GETMODELDSHQTY&r=" + Math.random(), { P1: "LCSP" }, function (r) {
+                    $.getJSON("/API/VIEWAPI.ashx?Action=LCSP_GETMODELDSHQTY&r=" + Math.random(), { P1: "LCSP" }, function (r) {
                         if (r.ErrorMsg == "") {
                             if (r.Result.length > 0) {
                                 model.shNum = r.Result[0].QTY;
