--- a/FTWeb/View_Mobile/UI/UI_QYTX_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_QYTX_LIST.html
@@ -98,7 +98,7 @@
 
       
         avalon.ready(function () {
-            $.getJSON("/API/WXAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
                 if (r.ErrorMsg == "") {
                     model.userData = r.Result;
                     $(".logo").show('normal')
