--- a/FTWeb/View_Mobile/UI/UI_TSSQ_FXLJ.html
+++ b/FTWeb/View_Mobile/UI/UI_TSSQ_FXLJ.html
@@ -92,7 +92,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=TSSQ_GETFXLJMODEL&r=" + Math.random(), { P1: model.DataID }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=TSSQ_GETFXLJMODEL&r=" + Math.random(), { P1: model.DataID }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (!r.Result) {
