--- a/FTWeb/View_Mobile/UI/UI_TSSQ_INDEX.html
+++ b/FTWeb/View_Mobile/UI/UI_TSSQ_INDEX.html
@@ -219,7 +219,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=TSSQ_GETHTLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID, lb: model.lbtype }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=TSSQ_GETHTLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID, lb: model.lbtype }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (model.page == 1 && r.Result.length == 0) {
@@ -259,7 +259,7 @@
             },
             pl: function (el) {
                 ComFunJS.showCommentNew(function (result) {
-                    $.getJSON('/API/WXAPI.ashx?Action=XTGL_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "Points": result.point, "MsgType": "TSSQ", "MsgLYID": el.ID }, function (resultData) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=XTGL_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "Points": result.point, "MsgType": "TSSQ", "MsgLYID": el.ID }, function (resultData) {
                         if (resultData.ErrorMsg == "") {
                             el.PLList.push(resultData.Result);
                             ComFunJS.winsuccess("评论成功");
@@ -271,7 +271,7 @@
             hf: function (el,pl) {
                 ComFunJS.showCommentNew(function (result) {
 
-                    $.getJSON('/API/WXAPI.ashx?Action=TSSQ_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "TLID": pl.ID, "MsgLYID": el.ID }, function (resultData) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=TSSQ_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "TLID": pl.ID, "MsgLYID": el.ID }, function (resultData) {
 
                         if (resultData.ErrorMsg == "") {
                             el.PLList.push(resultData.Result);
@@ -283,7 +283,7 @@
             },
             zan: function (el,obj) {
                 $(this).toggleClass("active animated pulse");
-                $.post('/API/WXAPI.ashx?Action=TSSQ_ZANHTBYID', { "P1": el.ID }, function (result) {
+                $.post('/API/VIEWAPI.ashx?Action=TSSQ_ZANHTBYID', { "P1": el.ID }, function (result) {
                     result = JSON.parse(result)
                     if (result.ErrorMsg == "") {
                         //ComFunJS.winsuccess("点赞成功");
@@ -313,7 +313,7 @@
             },
             DELHT: function (item) {
                 $.confirm('确认要删除吗？', function () {
-                    $.getJSON('/API/WXAPI.ashx?Action=TSSQ_DELHTBYID', { "P1": item.ID }, function (result) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=TSSQ_DELHTBYID', { "P1": item.ID }, function (result) {
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(item);
