--- a/FTWeb/View_Mobile/UI/UI_WQQD_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_WQQD_LIST.html
@@ -192,7 +192,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=WQQD_GETWQQDLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=WQQD_GETWQQDLIST&r=" + Math.random(), { P1: model.type, "p": model.page, ID: model.DataID }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         if (model.page == 1 && r.Result.length == 0) {
