--- a/FTWeb/View_Mobile/UI/UI_XMGL_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_XMGL_LIST.html
@@ -267,7 +267,7 @@
             loadMore: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=XMGL_GETXMGLDATA&r=" + Math.random(), { "p": model.page, P2: model.type, ID: model.DataID, Content: model.search }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=XMGL_GETXMGLDATA&r=" + Math.random(), { "p": model.page, P2: model.type, ID: model.DataID, Content: model.search }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         for (var i = 0; i < r.Result.length; i++) {
@@ -311,7 +311,7 @@
             pl: function (el) {
                 ComFunJS.showCommentNew(function (result) {
 
-                    $.getJSON('/API/WXAPI.ashx?Action=XTGL_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "Points": result.point, "MsgType": "XMGL", "MsgLYID": el.ID }, function (resultData) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=XTGL_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "Points": result.point, "MsgType": "XMGL", "MsgLYID": el.ID }, function (resultData) {
 
                         if (resultData.ErrorMsg == "") {
                             el.PLList.push(resultData.Result);
@@ -372,7 +372,7 @@
             },
             DELXMGL: function (item) {
                 $.confirm('确认要删除吗？', function () {
-                    $.getJSON('/API/WXAPI.ashx?Action=XMGL_DELXMGL', { "P2": item.ID }, function (result) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=XMGL_DELXMGL', { "P2": item.ID }, function (result) {
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(item);
