--- a/FTWeb/View_Mobile/UI/UI_XXFB_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_XXFB_LIST.html
@@ -153,7 +153,7 @@
             GetModelList: function () {
                 if (model.loading) return;
                 model.loading = true;
-                $.getJSON("/API/WXAPI.ashx?Action=XXFB_GETXXFBLISTWX&r=" + Math.random(), { "p": model.page, "P2": strId }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=XXFB_GETXXFBLISTWX&r=" + Math.random(), { "p": model.page, "P2": strId }, function (r) {
                     model.loading = false;
                     if (r.ErrorMsg == "") {
                         model.xxList.pushArray(r.Result);
@@ -177,14 +177,14 @@
             },
             UpStatus: function (el, type) {
                 var msg = "退回";
-                var urlapi = "/API/WXAPI.ashx?ACTION=XXFB_SHXXFB&r=" + Math.random();
+                var urlapi = "/API/VIEWAPI.ashx?ACTION=XXFB_SHXXFB&r=" + Math.random();
                 if (type == "1") {
                     msg = "同意";
                 } else if (type == "-1") {
                     msg = "退回";
                 } else if (type == "2") {
                     msg = "发布";
-                    urlapi = "/API/WXAPI.ashx?ACTION=XXFB_SUREXXFB&r=" + Math.random();
+                    urlapi = "/API/VIEWAPI.ashx?ACTION=XXFB_SUREXXFB&r=" + Math.random();
                 }
                 ComFunJS.showSH("200", msg, function (nr) {
                     $.post(urlapi, { P1: el.ID, P2: type, jy: nr }, function (result) {
@@ -206,7 +206,7 @@
 
         avalon.ready(function () {
 
-            $.post("/API/WXAPI.ashx?Action=XXFB_GETXXFBTYPELISTWX&r=" + Math.random(), { P1: strId }, function (data) {
+            $.post("/API/VIEWAPI.ashx?Action=XXFB_GETXXFBTYPELISTWX&r=" + Math.random(), { P1: strId }, function (data) {
 
                 var data = $.parseJSON(data);
                 if (data.ErrorMsg == "") {
