--- a/FTWeb/View_Mobile/UI/UI_ZHBG_NEWS.html
+++ b/FTWeb/View_Mobile/UI/UI_ZHBG_NEWS.html
@@ -51,7 +51,7 @@
 
         })
         avalon.ready(function () {
-            $.getJSON("/API/WXAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
                 if (r.ErrorMsg == "") {
                     model.userData = r.Result;
                     $(".logo").show()
